# stock-prediction

./: .gitignore  config.dist.py  cron.py  pyproject.toml  readme.txt  run.py
app/: __init__.py
app/sinet/core/: controllers.py  models.py  readme.txt  scheduler.py  schema.py  test.py  utils.py
app/sinet/market/: controllers.py  cron.py  models.py  resources.py  schema.py  utils.py
app/sinet/market/_sql/: aggregated_data-kghm.sql
app/sinet/market/api/: tradingeconomics.py
app/sinet/market/bond/: data_extraction.py
app/sinet/market/commodity/: data_extraction.py
app/sinet/market/currency/: data_extraction.py
app/sinet/market/economic_indicator/: data_extraction.py
app/sinet/market/stock/: data_extraction.py
app/sinet/market/stock/gpw/: data_extraction.py
app/sinet/user/: controllers.py  models.py  readme.txt  resources.py  schema.py  utils.py
systemd/: celery.service  celerybeat.service  gunicorn.service
